Mac Build changes